staging/website/manifold-website-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manifold-website-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: www.eventflow.ru
      http:
        paths:
        - backend:
            service:
              name: manifold-website
              port:
                number: 12549
          path: /
          pathType: Prefix
#  tls:
#    - secretName: eventflow-ru-tls
