staging/website/manifold-website-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manifold-website-redirect-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-scheme@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: www.eventflow.ru
    http:
      paths:
      - backend:
          service:
            name: manifold-website
            port:
              number: 12549
        path: /
        pathType: Prefix
